# simple-oracle

./: .gitignore  Cargo.toml  README.md  buf.gen.yaml
cosmwasm-proto/: Cargo.toml
cosmwasm-proto/src/: lib.rs
crates/erc4626/: Cargo.toml
crates/erc4626/contract/: erc4626_abi.json
crates/erc4626/src/: abi.rs  lib.rs
crates/simple-oracle/: Cargo.toml
crates/simple-oracle-bin/: Cargo.toml
crates/simple-oracle-bin/src/: main.rs
crates/simple-oracle-client/: Cargo.toml
crates/simple-oracle-client/src/: lib.rs  oracle.rs  querier.rs  utils.rs
crates/simple-oracle/src/: lib.rs  oracle.rs  querier.rs  tx.rs  utils.rs
osmosis_cosmwasm_proto/: buf.gen.yaml
