[workspace]
members = [
    "crates/erc4626",
    "crates/simple-oracle-bin",
    "crates/simple-oracle"
]

[workspace.dependencies]
erc4626 = { path = "crates/erc4626" }
simple-oracle = { path = "crates/simple-oracle" }
simple-oracle-bin = { path = "crates/simple-oracle-bin" }
confy = "0.5.1"
eyre = "0.6"
ethers = "2.0.10"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
