[package]
name = "simple-oracle-bin"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy.workspace = true 
simple-oracle-client.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4.4.6", features = ["derive"] }
