[package]
name = "simple-oracle-client"
version = "0.0.0"
edition = "2021"
authors = ["Zaki Manian", "Collin Brittain"]

[dependencies]
eyre.workspace = true
erc4626.workspace = true
ethers.workspace = true 
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

cosmos-sdk-proto = { version = "0.20.0", features = ["cosmwasm"] }
serde = { version = "1.0.188", features = ["derive"] }
# name collision may get confusing
simple_oracle = { git = "https://github.com/Levana-Protocol/simple-oracle" }
tonic = "0.10.2"
ocular = "1.0.0-beta-0.0.1"
cosmwasm = "0.7.2"
cosmwasm-std = "1.4.1"
serde_json = "1.0.107"

