[package]
name = "simple-oracle"
version = "0.0.0"
edition = "2021"
authors = ["Zaki Manian", "Collin Brittain"]

[dependencies]
eyre.workspace = true
erc4626.workspace = true
ethers.workspace = true 

cosmos-sdk-proto = { version = "0.20.0", features = ["cosmwasm"] }
serde = { version = "1.0.188", features = ["derive"] }

